==== Changes ====

=== version ${project.version} ===
  * add support for sequences and legs

=== version 0.2 ===
  * use serverside rendering of the iframe to enhance the speed of page rendering
  * use sass for stylesheet
  * render metadata 
  * render odt (requires testing)
  * make it possible to have more than one image embedded
  * add print styling

=== version 0.1 ===
  * initial version