@@ -28,12 +28,16 @@ on how to install plugins in DokuWiki.
   OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
   
 ----
-This plugin uses a third party service by Mapillary, please read up on their
-usage terms: http://www.mapillary.com/terms.html and business plans:
-http://www.mapillary.com/business.html
+  Mapillary
 
-Mapillary use, including the APIs and widget, are free for non-commercial use.
-Non-commercial use is any free service operated by a non-profit organization.
-Commercial use is any use where you are charging someone for using your 
-service or in any other way operating a business.
+  This plugin uses a third party service by Mapillary AB of Sweden, please 
+  read up on their usage terms: http://www.mapillary.com/terms.html and 
+  business plans: http://www.mapillary.com/business.html
+
+  Mapillary use, including the APIs and widget, are free for non-commercial use.
+  Non-commercial use is any free service operated by a non-profit organization.
+  Commercial use is any use where you are charging someone for using your 
+  service or in any other way operating a business.
+
+  Any of the Mapillary logo's and name are trademarks of Mapillary AB.
   
